WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110047
[Regression] SVG images used as background images are incorrectly scaled.
https://bugs.webkit.org/show_bug.cgi?id=110047
Summary
[Regression] SVG images used as background images are incorrectly scaled.
Philip Rogers
Reported
2013-02-16 21:54:21 PST
Created
attachment 188754
[details]
Testcase Almost certainly a regression from
r142765
. SVG images as backgrounds are rendering with scale applied twice on Skia-backed ports. See the attached testcase for an example.
Attachments
Testcase
(1.26 KB, text/html)
2013-02-16 21:54 PST
,
Philip Rogers
no flags
Details
Fix scaling of tiled SVG backgrounds on high-dpi displays
(7.70 KB, patch)
2013-02-17 21:58 PST
,
Philip Rogers
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philip Rogers
Comment 1
2013-02-17 21:58:17 PST
Created
attachment 188796
[details]
Fix scaling of tiled SVG backgrounds on high-dpi displays A nasty regression: I can't believe we had no test coverage of this!
Philip Rogers
Comment 2
2013-02-18 10:46:22 PST
Comment on
attachment 188796
[details]
Fix scaling of tiled SVG backgrounds on high-dpi displays Removing the review flag. After sleeping on this, we really need to split this into two patches.
Philip Rogers
Comment 3
2013-02-18 12:23:32 PST
Comment on
attachment 188796
[details]
Fix scaling of tiled SVG backgrounds on high-dpi displays Re-adding the review flag. I investigated separating this patch into two and I think landing these together is better after all.
Dirk Schulze
Comment 4
2013-02-18 12:42:08 PST
Comment on
attachment 188796
[details]
Fix scaling of tiled SVG backgrounds on high-dpi displays LGTM. r=me
Philip Rogers
Comment 5
2013-02-18 12:45:28 PST
Comment on
attachment 188796
[details]
Fix scaling of tiled SVG backgrounds on high-dpi displays Thanks for the review!
WebKit Review Bot
Comment 6
2013-02-18 13:27:13 PST
Comment on
attachment 188796
[details]
Fix scaling of tiled SVG backgrounds on high-dpi displays Clearing flags on attachment: 188796 Committed
r143257
: <
http://trac.webkit.org/changeset/143257
>
WebKit Review Bot
Comment 7
2013-02-18 13:27:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug